[tool.poetry]
name = "docs-boilerplate"
version = "0.0.1"
description = "A boilerplate for Blue Robotics documentation projects, built on the Sphinx framework."
authors = ["TechDocs Studio <info@techdocs.studio>"]
exclude = [".github", "docs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^4.0.0"
sphinx = "^8.1.3"
sphinx-blue-robotics-theme = { version = "^0.0.2", extras = ["extras", "cpp"] }
jinja2 = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
sphinx-autobuild = "^2024.10.3"